<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bctwo"
    android:id="@+id/activity_custom_calendar">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:background="@drawable/bluebackground"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageButton
            android:id="@+id/previousBtn"
            android:layout_width="44dp"
            android:layout_height="42dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:background="@drawable/back"

            />

        <TextView
            android:id="@+id/current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="CurrentDate"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="3"
            />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="44dp"
            android:layout_height="42dp"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:background="@drawable/backk"

            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:background="@color/design_default_color_secondary_variant"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sun"
            android:background="@color/design_default_color_secondary_variant"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mon"
            android:background="@color/design_default_color_secondary"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tue"
            android:background="@color/design_default_color_secondary_variant"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wed"
            android:background="@color/design_default_color_secondary"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thur"
            android:background="@color/design_default_color_secondary_variant"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fri"
            android:background="@color/design_default_color_secondary"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sat"
            android:background="@color/design_default_color_secondary_variant"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:textStyle="bold"/>

    </LinearLayout>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/gridview"
        android:numColumns="7">

    </GridView>
</LinearLayout>