<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@drawable/bluebackground">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/eventname"
        android:hint="@string/schedule_session"
        android:inputType="textShortMessage"
       android:background="@color/design_default_color_secondary_variant"
        android:layout_margin="20dp"
        android:textColorHint="#ffff"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/time"
            android:layout_margin="10dp"
            android:id="@+id/seteventtime"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_00_00am"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="#ffff"
                android:textStyle="bold"
                android:id="@+id/eventtime"
                android:layout_margin="10dp"/>

</LinearLayout>

    <Button
        android:id="@+id/addevent"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/buttton"
        android:text="@string/add_yoga_session"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textStyle="bold" />
</LinearLayout>