<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/back"
        android:layout_width="57dp"
        android:layout_height="85dp"

        android:src="@drawable/back"

        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/title"
        android:layout_width="198dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ronaldsmith"
        android:text="@string/yoga_workout_poses"
        android:textColor="#009688"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/Stretch"
        android:layout_width="147dp"
        android:layout_height="135dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Lie"
        app:layout_constraintLeft_toLeftOf="@+id/StretchText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/warrior_pose" />

    <TextView
        android:id="@+id/StretchText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/hold_your_left_leg_with_your_right_hand_and_stratch_to_your_right_for_30_seconds"
        android:textColor="#009688"
android:backgroundTint="#ffffff"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@id/Stretch"
        app:layout_constraintBottom_toTopOf="@+id/Stretch"
        app:layout_constraintStart_toEndOf="@+id/Stretch"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <ImageView
        android:id="@+id/Lie"
        android:layout_width="150dp"
        android:layout_height="150dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/StretchText"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Stretch"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/source" />

    <TextView
        android:id="@+id/LieText"
        android:layout_width="232dp"
        android:layout_height="68dp"

        android:layout_marginTop="120dp"
        android:background="#ffffff"
        android:text="@string/lift_your_back_up_at_a_60_degree_angle_for_1_minute"

        android:textColor="#009688"
        android:textStyle="bold"


        app:layout_constraintLeft_toRightOf="@id/Lie"

        app:layout_constraintStart_toEndOf="@id/Stretch"
        app:layout_constraintTop_toBottomOf="@+id/Stretch" />

    <ImageView
        android:id="@+id/Up"
        android:layout_width="150dp"
        android:layout_height="150dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/Lie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lie"


        app:srcCompat="@drawable/bout_pose" />

    <TextView
        android:id="@+id/UpText"
        android:layout_width="208dp"
        android:layout_height="33dp"
        android:background="#ffffff"

        android:text="@string/incline_in_this_position_for_20_sec"
        android:textColor="#009688"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/Up"
        app:layout_constraintStart_toEndOf="@id/Up"
        app:layout_constraintTop_toBottomOf="@+id/Stretch"

        app:layout_constraintVertical_bias="0.738" />


</androidx.constraintlayout.widget.ConstraintLayout>
